; ModuleID = '/home/carl/AnghaBench/radare2/libr/cons/extr_2048.c_twok_add.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/cons/extr_2048.c_twok_add.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@twok_buf = common dso_local global i32** null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @twok_add to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @twok_add() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  br label %3

3:                                                ; preds = %0, %29
  %4 = call i32 @r_num_rand(i32 4)
  store i32 %4, i32* %1, align 4
  %5 = call i32 @r_num_rand(i32 4)
  store i32 %5, i32* %2, align 4
  %6 = load i32**, i32*** @twok_buf, align 8
  %7 = load i32, i32* %1, align 4
  %8 = sext i32 %7 to i64
  %9 = getelementptr inbounds i32*, i32** %6, i64 %8
  %10 = load i32*, i32** %9, align 8
  %11 = load i32, i32* %2, align 4
  %12 = sext i32 %11 to i64
  %13 = getelementptr inbounds i32, i32* %10, i64 %12
  %14 = load i32, i32* %13, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %29, label %16

16:                                               ; preds = %3
  %17 = call i32 @r_num_rand(i32 10)
  %18 = icmp eq i32 %17, 1
  %19 = zext i1 %18 to i32
  %20 = add nsw i32 1, %19
  %21 = load i32**, i32*** @twok_buf, align 8
  %22 = load i32, i32* %1, align 4
  %23 = sext i32 %22 to i64
  %24 = getelementptr inbounds i32*, i32** %21, i64 %23
  %25 = load i32*, i32** %24, align 8
  %26 = load i32, i32* %2, align 4
  %27 = sext i32 %26 to i64
  %28 = getelementptr inbounds i32, i32* %25, i64 %27
  store i32 %20, i32* %28, align 4
  br label %30

29:                                               ; preds = %3
  br label %3

30:                                               ; preds = %16
  ret void
}

declare dso_local i32 @r_num_rand(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
